--- a/.editorconfig
+++ b/.editorconfig
@@ -25,11 +25,21 @@ dotnet_diagnostic.IDE0019.severity = error
 
 dotnet_diagnostic.IDE0020.severity = error
 
+dotnet_diagnostic.IDE0021.severity = error
+
+dotnet_diagnostic.IDE0022.severity = error
+
+dotnet_diagnostic.IDE0025.severity = error
+
+dotnet_diagnostic.IDE0027.severity = error
+
 dotnet_diagnostic.IDE0031.severity = error
 
 dotnet_diagnostic.IDE0038.severity = error
 
 dotnet_diagnostic.IDE0041.severity = error
+
+dotnet_diagnostic.IDE0044.severity = error
 
 dotnet_diagnostic.IDE0066.severity = error
 
@@ -113,7 +123,7 @@ dotnet_diagnostic.SA1104.severity = warning
 
 dotnet_diagnostic.SA1105.severity = warning
 
-dotnet_diagnostic.SA1106.severity = warning
+dotnet_diagnostic.SA1106.severity = error
 
 dotnet_diagnostic.SA1107.severity = warning
 
@@ -207,7 +217,7 @@ dotnet_diagnostic.SA1212.severity = warning
 
 dotnet_diagnostic.SA1213.severity = warning
 
-dotnet_diagnostic.SA1214.severity = warning
+dotnet_diagnostic.SA1214.severity = error
 
 dotnet_diagnostic.SA1216.severity = warning
 
@@ -426,7 +436,6 @@ dotnet_diagnostic.SX1309S.severity = error
 dotnet_diagnostic.VSTHRD100.severity = error
 
 dotnet_diagnostic.VSTHRD200.severity = error
-
 [*.cs]
 dotnet_style_null_propagation = true
 csharp_style_namespace_declarations = file_scoped:error
@@ -442,3 +451,10 @@ csharp_style_pattern_matching_over_is_with_cast_check = true:error
 csharp_style_prefer_switch_expression = true:error
 csharp_style_prefer_pattern_matching = true:error
 csharp_style_prefer_not_pattern = true:error
+csharp_style_expression_bodied_methods = when_on_single_line:error
+csharp_style_expression_bodied_constructors =when_on_single_line:error
+csharp_style_expression_bodied_properties = when_on_single_line:error
+csharp_style_expression_bodied_accessors = when_on_single_line:error
+
+# Default severity for all analyzer diagnostics
+dotnet_analyzer_diagnostic.severity = suggestion
